//=====================================================================
//	Revision History for package STL_Extension
//=====================================================================


//---------------------------------------------------------------------
//	actual revision
//---------------------------------------------------------------------

GLOB: - Sun doesn't have operator!= for std::reverse_iterator
GLOB: removed stlport/cgal_functional_base.h
GLOB: Fix typo in iterator.h
GLOB: SRC : Excluded vector from MSC VC6.
GLOB: SRC : Added != and comparison ops for test class X in test_vector.C.
GLOB: SRC : Changed vector to improve cross platform compilation.
GLOB: Calls to std::uninitialized_.... use pointers as iterators to the
GLOB: uninitialized memory. The std::uninitialized_fill has no return value.
GLOB: The test_vector.C file used the same variable in several for loops.
ALL : SRC : Added vector class in include/CGAL/vector.h.
ALL : TEST: Added vector test program in test/STL_Extension/test_vector.C
GLOB: remove Susan as maintainer
ALL : moved reference page directory up one level to effect split of support
ALL :  manual
ALL : Removed a lot of obsolete workarounds.
ALL : Updates for Filter_iterator by Menelaos.
ALL : Include docs for Compact_container.
ALL : Some fixes for Compact_container by Sylvain.
ALL : Added template constructors to Triple/Quadruple (<- Sylvain).
ALL : Optimized operator< for Triple/Quadruple (<- Sylvain).
DOCS: added a new main.tex for the user manual chapter and relabeled ref manual
DOCS: chapter accordingly
ALL : Use Arity_traits also in functional_msvc.
ALL : Small change in In_place_list to please VC7.
ALL : Changed triple, quadruple -> Triple, Quadruple.
ALL : Rejoined Inverse_index fix by Dima.
ALL : Fixed sunpro 5.3 problems.
SRC : Added Emptyset_iterator and Oneset_iterator.
SRC : Combined iterators and iterator adaptors into iterator.h.
SRC : Fixed a few more sunpro problems.